added missing test namespace to fires. Added pergemsize expansion to jvm-opts, to assist in leiningen testing.